--- a/Projeto/package.json
+++ b/Projeto/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "server",
+  "name": "projeto",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Projeto de Web Development",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "devStart": "nodemon index.js"
+    "start": "node server.js",
+    "devStart": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,16 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/armandobrandao/WebDev"
   }
 }
