--- a/Projeto/package.json
+++ b/Projeto/package.json
@@ -21,7 +21,8 @@
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
